<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fahrul.u_con.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.fahrul.u_con.ui.dashboard.DashboardFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.fahrul.u_con.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.fahrul.u_con.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>