<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:foregroundGravity="center"
        android:background="#000000">
        <ImageView
            android:scaleType="centerCrop"
            android:alpha="0.5"
            android:id="@+id/imgBg"
            android:src="@drawable/image_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="97.5dp"
            android:layout_height="97.5dp"
            android:src="@drawable/gambartoko"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.112" />

        <TextView
            android:id="@+id/tvNamaToko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rm_sukamaju"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvJalan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jl_suka_mundur"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNamaToko" />

        <LinearLayout
            android:padding="5dp"
            android:orientation="horizontal"
            android:background="@drawable/full_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvJalan">

            <ImageView
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_diskon"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:text="@string/voucher_s_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/tvDiskon"
                android:text="75%"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="Menu Makanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"/>

</LinearLayout>